# trading

./: .dockerignore  .gitignore  Dockerfile  README.md  automatic_trading_bot_infra.md  automatic_trading_bot_plan.md  automatic_trading_bot_runbook.md  docker-compose.dca.yml  docker-compose.grid.yml  docker-compose.yml  pyproject.toml
config/: secrets.dca.example.env  secrets.example.env  secrets.grid.example.env  settings.dca.yaml  settings.grid.yaml  settings.yaml
deploy/: bootstrap-ubuntu-docker.sh  cloud-vps.md  update-cloud.sh
src/trading_bot/: __init__.py  __main__.py  allocation.py  app.py  config.py  logging_config.py  main.py
src/trading_bot/backtesting/: __init__.py  bars.py  dca.py  grid.py  reports.py
src/trading_bot/brokers/: alpaca.py  base.py
src/trading_bot/cli/: parser.py
src/trading_bot/commands/: backtesting.py  basic.py  dca.py  dca_backtesting.py  grid.py
src/trading_bot/cycles/: open_discovery.py  run_cycle.py
strategy/: dca_strategy.md  grid_backtest_plan.md  grid_strategy.md  put_credit_strategy.md
tests/: test_account_risk.py  test_allocation.py  test_backtest_bars.py  test_config.py  test_daily_summary.py  test_dca_backtest.py  test_dca_runtime.py  test_dca_strategy.py  test_discord.py  test_entry_execution_management.py  test_execution_gate.py  test_grid_backtest.py  test_grid_execution.py  test_grid_runtime.py  test_llm_decision.py  test_market_context.py  test_open_discovery.py  test_openai_client.py  test_order_preview.py  test_order_status_events.py  test_position_monitor.py  test_put_credit_spread.py  test_run_cycle.py
(+40 files in other folders)
