[project]
name = "trading-bot"
version = "0.1.0"
description = "Local-first paper options trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.0",
  "PyYAML>=6.0.2",
]

[project.scripts]
trading-bot = "trading_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

